main/default/objects/Adhoc_Journey_Assignment__c/Adhoc_Journey_Assignment__c.object-meta.xml
<CustomObject>
    <description>Milestone Builder for Multiple Journeys</description>
    <label>Journey Assignment</label>
    <nameField>
        <displayFormat>JA{000000}</displayFormat>
        <label>Journey Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>