main/default/objects/Adhoc_Journey_Assignment__c/fields/Associated_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Associated_Milestone__c</fullName>
    <description>Displays the Name of the Event or Survey</description>
    <formula>IF( ISPICKVAL(Type__c,&quot;Event&quot;), HYPERLINK(&quot;/&quot; &amp; Event__r.Id, Event__r.Name),
IF( ISPICKVAL(Type__c,&quot;Survey&quot;), HYPERLINK(&quot;/&quot; &amp; Survey__r.Id, Survey__r.Name),
HYPERLINK(&quot;/&quot; &amp; Quick_Check__r.Id, Quick_Check__r.Name))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Milestone</label>
    <type>Text</type>
</CustomField>