main/default/objects/Adhoc_Journey_Assignment__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LInks to the Event</description>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipName>Journey_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>