main/default/objects/Adhoc_Journey_Assignment__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the Journey</description>
    <label>Journey</label>
    <referenceTo>Journey__c</referenceTo>
    <relationshipName>Journey_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>