main/default/objects/Adhoc_Journey_Assignment__c/fields/Quick_Check__c.field-meta.xml
<CustomField>
    <fullName>Quick_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to quick check</description>
    <label>Quick Check</label>
    <referenceTo>Quick_Check__c</referenceTo>
    <relationshipLabel>Journey Assignments</relationshipLabel>
    <relationshipName>Journey_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>