main/default/objects/Adhoc_Journey_Assignment__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Survey</description>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipName>Journey_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>