main/default/objects/Adhoc_Journey_Assignment__c/validationRules/Invalid_Type_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Type_Rule</fullName>
    <active>true</active>
    <description>Makes sure that Event or Survey is populated depending on the Type</description>
    <errorConditionFormula>OR( AND(CONTAINS(&quot;Event&quot;, TEXT(Type__c)), ISBLANK(Event__c)) ,
 AND(CONTAINS(&quot;Survey&quot;, TEXT(Type__c)), ISBLANK(Survey__c)) ,
 AND(CONTAINS(&quot;Quick Check&quot;, TEXT(Type__c)), ISBLANK(Quick_Check__c))   
 )</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Invalid Type Selected!</errorMessage>
</ValidationRule>