main/default/objects/Adhoc_Journey_Assignment__c/validationRules/Milestone_enabled_record_checker.validationRule-meta.xml
<ValidationRule>
    <fullName>Milestone_enabled_record_checker</fullName>
    <active>true</active>
    <description>Checks if the Event or Survey is tagged as milestone</description>
    <errorConditionFormula>OR(NOT(Event__r.Milestone__c),NOT(Survey__r.Milestone__c))</errorConditionFormula>
    <errorMessage>Cannot link Journey to a non-milestone record. Update the &apos;Milestone&apos; flag first before adding Adhoc Journey Assignment.</errorMessage>
</ValidationRule>