main/default/objects/Adhoc_Journey_Assignment__c/validationRules/New_entry_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>New_entry_validation</fullName>
    <active>true</active>
    <description>Enforces user to link the Journey to either Event or Survey not both.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Survey__c)),NOT(ISBLANK(Event__c)))</errorConditionFormula>
    <errorMessage>A Journey cannot be linked to both Event and Survey.</errorMessage>
</ValidationRule>